# fast-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
deploy/: fastapi-service.service  manual-setup-commands.md  nginx-fastapi.conf  setup-ec2.sh
tests/: test_main.py
